@@ -56,7 +56,7 @@ ValueShort::ValueShort
 	int16 const _value,
 	uint8 const _pollIntensity
 ):
-  	Value( _homeId, _nodeId, _genre, _commandClassId, _instance, _index, ValueID::ValueType_Byte, _label, _units, _readOnly, _writeOnly, false, _pollIntensity ),
+  	Value( _homeId, _nodeId, _genre, _commandClassId, _instance, _index, ValueID::ValueType_Short, _label, _units, _readOnly, _writeOnly, false, _pollIntensity ),
 	m_value( _value ),
 	m_valueCheck( 0 ),
 	m_newValue( 0 )
@@ -175,7 +175,7 @@ void ValueShort::OnValueRefreshed
 	int16 const _value
 )
 {
-	switch( VerifyRefreshedValue( (void*) &m_value, (void*) &m_valueCheck, (void*) &_value, 2) )
+	switch( VerifyRefreshedValue( (void*) &m_value, (void*) &m_valueCheck, (void*) &_value, ValueID::ValueType_Short) )
 	{
 	case 0:		// value hasn't changed, nothing to do
 		break;
